--- a/index.html
+++ b/index.html
@@ -6,90 +6,205 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Token 2</title>
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&family=Open+Sans:wght@400;600;700;800&display=swap"
         rel="stylesheet">
+    <!-- Font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css" rel="stylesheet" />
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.3/dist/css/splide.min.css">
+    <!-- styles -->
     <link rel="stylesheet" href="css/nav.css">
     <script src="./js/jquery.min.js"></script>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="img/icon/logo-black.png" alt=""></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <!-- Dropdown -->
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                            data-mdb-toggle="dropdown" aria-expanded="false">
-                            Products
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li>
-                                <a class="dropdown-item" href="#">FIDO2 Keys</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#">
-                                    Classic Tokens &raquo;
-                                </a>
-                                <ul class="dropdown-menu dropdown-submenu">
-                                    <li>
-                                        <a class="dropdown-item" href="#">Token2 c202 TOTP hardware token</a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" href="#">Token2 c202 hardware token - 10 pack</a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" href="#">Token2 c202 hardware token - 5 pack</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#">Programmable Tokens</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#">TOTPRadius</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Tools</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Guides</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">FAQ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contacts</a>
-                    </li>
-                </ul>
+    <header class="header">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container">
+                <a class="navbar-brand" href="#"><img src="img/icon/logo-white.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                                data-mdb-toggle="dropdown" aria-expanded="false">
+                                Products
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <li>
+                                    <a class="dropdown-item" href="#">FIDO2 Keys</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">
+                                        Classic Tokens &raquo;
+                                    </a>
+                                    <ul class="dropdown-menu dropdown-submenu">
+                                        <li>
+                                            <a class="dropdown-item" href="#">Token2 c202 TOTP hardware token</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="#">Token2 c202 hardware token - 10 pack</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="#">Token2 c202 hardware token - 5 pack</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">Programmable Tokens</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">TOTPRadius</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Tools</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Guides</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">FAQ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contacts</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="nav__actions">
+                    <button type="button" class="btn nav__btn btn_square me-2">
+                        <i class="fa-regular fa-user"></i>
+                    </button>
+                    <button type="button" class="btn nav__btn">
+                        <i class="fa-regular fa-cart-shopping me-1"></i> 30
+                    </button>
+                </div>
+                <!-- <button type="button" class="btn nav__btn btn_square">
+                <i class="fa-regular fa-arrow-right-from-bracket"></i>
+            </button> -->
+            </div>
+        </nav>
+        <hero class="hero">
+            <div class="container">
+                <div class="hero__content">
+                    <h1 class="hero__title text-white">Find true power in your data with Token2</h1>
+                    <p class="hero__text text-white">
+                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                        laudantium,
+                        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
+                        dicta sunt explicabo.
+                    </p>
+                    <div class="hero__buttons">
+                        <a href="#" class="btn btn-light hero__btn">Learn more</a>
+                        <button class="btn hero__play__btn">
+                            <i class="fa-regular fa-circle-play"></i>
+                            Watch the demo
+                        </button>
+                    </div>
+                </div>
+                <div class="hero__products">
+                    <div class="container">
+                        <div class="hero__cards">
+                            <div class="hero__card">
+                                <img src="img/products/hero-product1.png" alt="" class="hero_card_img">
+                                <div class="hero_card_content">
+                                    <h3 class="hero_card_title">FIDO2 Keys</h3>
+                                    <p class="hero_card_text">Token2 is a verified Microsoft-compatible FIDO2 security
+                                        key
+                                        vendor</p>
+                                    <p class="hero_card_desc">All Token2 FIDO2 security keys listed on this page are
+                                        verified by
+                                        Microsoft as compatible with the Azure Active Directory passwordless experience.
+                                    </p>
+                                    <a href="#" class="hero_card_link">See all products <i
+                                            class="fa-regular fa-right-long ms-1"></i></a>
+                                    <a href="" class="btn hero_card_btn">
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="hero__card">
+                                <img src="img/products/hero-product2.png" alt="" class="hero_card_img">
+                                <div class="hero_card_content">
+                                    <h3 class="hero_card_title">FIDO2 Keys</h3>
+                                    <p class="hero_card_text">Token2 is a verified Microsoft-compatible FIDO2 security
+                                        key
+                                        vendor</p>
+                                    <p class="hero_card_desc">All Token2 FIDO2 security keys listed on this page are
+                                        verified by
+                                        Microsoft as compatible with the Azure Active Directory passwordless experience.
+                                    </p>
+                                    <a href="#" class="hero_card_link">See all products <i
+                                            class="fa-regular fa-right-long ms-1"></i></a>
+                                    <a href="" class="btn hero_card_btn">
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="hero__card">
+                                <img src="img/products/hero-product3.png" alt="" class="hero_card_img">
+                                <div class="hero_card_content">
+                                    <h3 class="hero_card_title">FIDO2 Keys</h3>
+                                    <p class="hero_card_text">Token2 is a verified Microsoft-compatible FIDO2 security
+                                        key
+                                        vendor</p>
+                                    <p class="hero_card_desc">All Token2 FIDO2 security keys listed on this page are
+                                        verified by
+                                        Microsoft as compatible with the Azure Active Directory passwordless experience.
+                                    </p>
+                                    <a href="#" class="hero_card_link">See all products <i
+                                            class="fa-regular fa-right-long ms-1"></i></a>
+                                    <a href="" class="btn hero_card_btn">
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </hero>
+    </header>
+
+    <main class="main">
+        <div class="container">
+            <div class="main_section_header">
+                <h3 class="main__title">Best-selling</h3>
+                <a href="#" class="main_see_all">See all</a>
             </div>
         </div>
-    </nav>
+        <section class="best__selling">
+            <div class="splide" role="group">
+                <div class="splide__track">
+                    <ul class="splide__list">
+                        <li class="splide__slide">Slide 01</li>
+                        <li class="splide__slide">Slide 02</li>
+                        <li class="splide__slide">Slide 03</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </main>
 
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.3/dist/js/splide.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
 </body>
 
