--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.3/dist/css/splide.min.css">
     <!-- styles -->
-    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/home.css">
     <script src="./js/jquery.min.js"></script>
 </head>
 
@@ -328,9 +329,9 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="banner">
             <div class="container">
-                <div class="splide slider" role="group">
+                <div class="splide banner__slider" role="group">
                     <div class="splide__track">
                         <ul class="splide__list">
                             <li class="splide__slide"></li>
@@ -342,26 +343,15 @@
                 </div>
             </div>
         </section>
-        <section class="subscribe">
-            <div class="container">
-                <div class="subscribe__content">
-                    <h3 class="subscribe__title">
-                        Subscribe to our newsletter
-                    </h3>
-                    <p class="subscribe__text">
-                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                        laudantium.
-                    </p>
-                </div>
-                <form action="#" class="subscribe__form">
-                    <div class="input-group">
-                        <input type="email" name="email" class="form-control subscribe__input form-control-lg"
-                            placeholder="Your email">
-                        <button class="btn btn-light subscribe__btn" type="submit">Send</button>
-                    </div>
-                </form>
-            </div>
-        </section>
+        <!-- Import subscribe using Jquery you can remove subscribe__loader during backend process  -->
+        <div class="subscribe__loader">
+            <script>
+                $(document).ready(function () {
+                    $('.subscribe__loader').load("components/subscribe.html");
+                });
+            </script>
+        </div>
+        <!--  -->
     </main>
 
     <!-- Import footer using Jquery you can remove footer__loader if you use backend language -->
