--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.3/dist/css/splide.min.css">
     <!-- styles -->
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="css/home.css">
@@ -24,7 +23,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header header__red">
         <!-- Import navbar using Jquery you can remove nav__loader if you use backend language -->
         <div class="nav__loader">
             <script>
@@ -45,7 +44,7 @@
                         dicta sunt explicabo.
                     </p>
                     <div class="hero__buttons">
-                        <a href="#" class="btn btn-light hero__btn">Learn more</a>
+                        <a href="pages/about.html" class="btn btn-light hero__btn">Learn more</a>
                         <button class="btn hero__play__btn">
                             <i class="fa-regular fa-circle-play"></i>
                             Watch the demo
@@ -363,9 +362,7 @@
         </script>
     </div>
     <!--  -->
-    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.3/dist/js/splide.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
-    <script src="js/splide.js"></script>
 </body>
 
 </html>
