--- a/pages/about.html
+++ b/pages/about.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <header class="header" style="max-height: 736px;">
+    <header class="header header__red" style="max-height: 736px;">
         <!-- Import navbar using Jquery you can remove nav__loader during backend process -->
         <div class="nav__loader">
             <script>
@@ -70,7 +70,7 @@
                             <img src="../img/icon/SWISS_MADE.png" alt="" class="about_box_logo">
                         </div>
                         <p class="about_box_desc">
-                            Token2 is a member of swiss made software label. The swiss made software label is dedicated
+                            Token2 is a member of <a href="#">swiss made software</a> label. The swiss made software label is dedicated
                             to promoting the Swiss software industry, both at home and abroad. It combines Swiss values
                             such as quality, reliability and precision – especially in software development.
                         </p>
