--- a/pages/about.html
+++ b/pages/about.html
@@ -38,7 +38,7 @@
                 <h2 class="about__title">About us</h2>
                 <div class="about__boxes">
                     <div class="about__box">
-                        <div class="about_box_header">
+                        <div class="about_box_header between_center">
                             <h4 class="about_box_title">Token2</h4>
                             <img src="../img/icon/logo.png" alt="" class="about_box_logo">
                         </div>
@@ -120,7 +120,7 @@
             </div>
         </section>
         <div class="container">
-            <section class="about__keys">
+            <section class="about__keys between_center">
                 <div class="about_keys_item">
                     <iframe width="428" height="340" src="https://www.youtube.com/embed/NaXQPLtZHMg"
                         title="YouTube video player" frameborder="0"
